<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">GNLocator</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">Location settings</string>
    <string name="btnMap">Show on map</string>
    <string name="CodeBtn">Code number</string>
    <string name="DecodeBtn">Decode number</string>
    <string name="write_file">Write to file</string>
    <string name="read_file">Read from file</string>
    <string name="hint">Enter number</string>
    <string name="Clear">Clear all strings</string>
    <string name="Share">Share via</string>
    <string name="ShareBTN">Share location</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_network">NetworkActivity</string>
    <string name="SecondActivity">Go to 2nd screen</string>
    <string name="NetTab">Net</string>
    <string name="GPSTab">GPS</string>
    <string name="developer">developers</string>
    <string name="title_activity_developers">Developers</string>
    <string name="hello_world">GNLocator</string>

</resources>
